--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Tue Sep 28 17:55:17 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* tests/latency/bselatencytest.[ic]*: Module which allows automated
+	midi latency testing.
+
+Tue Sep 28 10:55:32 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* tests/audio/featuretest.sh: Use -p and -m options to select null
+	driver. This allows feature tests to run independantly of audio, and
+	at maximum speed.
+
 Mon Sep 27 06:46:10 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/Makefile.am:
