build tests/latency/Makefile.
Tue Sep 28 18:25:54 2004  Tim Janik  <timj@gtk.org>

        * configure.in: build tests/latency/Makefile.

        * tests/latency/Makefile.am: build bselatencytest plugin.

svn path=/trunk/; revision=2641

--- a/TODO
+++ b/TODO
@@ -19,6 +19,7 @@ FIXMES:	(release-critical)
   (not having /dev/midi gets really annoying)
   or disable "/dev/midi": no such device dialog
 - update gtk/glib dependency to 2.4 in README and configure.in
+- add srcdir==builddir requirement for CVS builds to download area
 TODO:
 - add -n <nicelevel> and -N for not nicing to beast and bsesh launchers
 - add executable versioning to sfidl 
