--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Sep 28 18:51:00 2004  Tim Janik  <timj@gtk.org>
+
+	* tests/latency/bselatencytest.cc: fixed up device handling, so the 
+	module works out of the box.
+
 Tue Sep 28 18:25:54 2004  Tim Janik  <timj@gtk.org>
 
 	* configure.in: build tests/latency/Makefile.
