--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,13 @@
+Tue Sep 28 20:38:45 2004  Tim Janik  <timj@gtk.org>
+
+	* gslcommon.[hc]: moved file tests to sfi:
+	gsl_error_from_errno(): some errno reassignbements, for EBADF, ENOTDIR
+	and ENODEV, return fallback to indicate operation failure (rather than
+	"not found" or internal error). adapted users.
+	gsl_check_file_equals(): removed, use sfi_file_equals() instead.
+	gsl_file_check(): renamed from gsl_check_file(), use sfi_file_check()
+	internally.
+
 Tue Sep 28 18:26:23 2004  Tim Janik  <timj@gtk.org>
 
 	* bsedefs.h: added n_fds to BseIOWatch, adapted users.
