--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Sep 28 21:49:25 2004  Tim Janik  <timj@gtk.org>
+
+	* tests/latency/midi-latency.bse: added test file for BseLatencyTest.
+
 Tue Sep 28 21:47:27 2004  Tim Janik  <timj@gtk.org>
 
 	* tests/latency/bselatencytest.cc: check pipe file type.
