--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Wed Sep 29 11:37:44 2004  Tim Janik  <timj@gtk.org>
+
+	* bsessequencer.cc: CVS copied from bsessequencer.c.
+
 Tue Sep 28 23:01:23 2004  Tim Janik  <timj@gtk.org>
 
 	* bsemain.[hc]: added --bse-override-plugin-globs <glob> and
