--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,14 @@
+Wed Sep 29 19:16:23 2004  Tim Janik  <timj@gtk.org>
+
+	* bsessequencer.cc: renamed symbols from ssequencer to sequencer,
+	adapted users. added io watch API:
+	bse_sequencer_add_io_watch(): install poll-fds and a handler.
+	bse_sequencer_remove_io_watch(): remove an io watch handler.
+
+	* bsemididevice-oss.c: ported to use BseSequencer io watch API.
+
+	* bsemididevice.h: added midi_decoder field to handle.
+
 Wed Sep 29 11:44:23 2004  Tim Janik  <timj@gtk.org>
 
 	* bsessequencer.c: removed.
