--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,11 @@
+Wed Sep 29 19:59:42 2004  Tim Janik  <timj@gtk.org>
+
+	* bsesequencer.h: CVS copied from bsessequencer.h.
+
+	* bsesequencer.cc: CVS moved from bsessequencer.cc.
+
+	* bsessequencer.h: removed.
+
 Wed Sep 29 19:16:23 2004  Tim Janik  <timj@gtk.org>
 
 	* bsessequencer.cc: renamed symbols from ssequencer to sequencer,
