--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Wed Sep 29 21:01:28 2004  Tim Janik  <timj@gtk.org>
+
+	* bsesequencer.cc: make wake-up pipe non-blocking. properly wake up
+	sequencer thread, so it stops polling on removed io watch fds.
+
 Wed Sep 29 19:59:42 2004  Tim Janik  <timj@gtk.org>
 
 	* bsesequencer.h: CVS copied from bsessequencer.h.
