--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Thu Sep 30 03:22:23 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstcanvassource.c (bst_canvas_source_build_async): perform
+	more granular updates.
+
+	* beast-gtk/bstutils.c (bst_background_handlers_timeout): provide 
+	status bar feedback about length GUI updates.
+
 Thu Sep 30 02:54:19 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstcanvassource.c:
