--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,16 @@
+Sat Oct  2 21:01:44 2004  Tim Janik  <timj@gtk.org>
+
+	* sfilog.[hc]: revamped logging API. sfi_warn() became sfi_warning().
+	sfi_error(), sfi_warning(), sfi_info() and sfi_diag() do not take an
+	extra argument anymore. they are meant to indicate user visible errors,
+	warnings and informations, and if requested, diagnostics.
+	new variants exist for user configurable error, warning and information
+	messages: sfi_error_msg(), sfi_warning_msg(), sfi_info_msg(). these 
+	take an extra configuration relevant (and translated) argument.
+	some more API cleanups wrg logging system configuration.
+
+	* sfithreads.[hc]: added sfi_thread_get_pid(), sfi_thread_get_name().
+
 Tue Sep 28 21:45:12 2004  Tim Janik  <timj@gtk.org>
 
 	* sfifilecrawler.[hc]: added sfi_file_check() and sfi_file_equals()
