--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Sat Oct  2 21:12:13 2004  Tim Janik  <timj@gtk.org>
+
+	* *.c: adapt to logging API changes.
+
 Wed Sep 29 21:01:28 2004  Tim Janik  <timj@gtk.org>
 
 	* bsesequencer.cc: make wake-up pipe non-blocking. properly wake up
