--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Oct  2 21:12:45 2004  Tim Janik  <timj@gtk.org>
+
+	* *.c, *.cc: adaptions to logging API changes.
+
 Thu Sep 30 03:32:28 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstcanvassource.c (bst_canvas_source_build_async): order
