--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,11 @@
+Mon Oct  4 03:44:03 2004  Tim Janik  <timj@gtk.org>
+
+	* sfiparams.c: fixed param-spec leaks.
+
+	* sfilog.[hc]: changed logging to use a handler per-thread.
+
+	* sfiprimitives.[hc]: added sfi_seq_validate().
+
 Sat Oct  2 21:01:44 2004  Tim Janik  <timj@gtk.org>
 
 	* sfilog.[hc]: revamped logging API. sfi_warn() became sfi_warning().
