--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,15 @@
+Mon Oct  4 03:46:52 2004  Tim Janik  <timj@gtk.org>
+
+	* bsestorage.c: fixed version string parsing.
+
+	* bsecore.idl: provide user-message types and record.
+
+	* bseserver.[hc]: extended user message notifications.
+
+	* bsemain.c:
+	* bsesequencer.cc:
+	* bseenginemaster.c: set log handler for the various threads.
+
 Sat Oct  2 21:12:13 2004  Tim Janik  <timj@gtk.org>
 
 	* *.c: adapt to logging API changes.
