--- a/drivers/bse-alsa/ChangeLog
+++ b/drivers/bse-alsa/ChangeLog
@@ -1,3 +1,9 @@
+Mon Oct  4 08:59:13 2004  Tim Janik  <timj@gtk.org>
+
+	* bsemididevice-alsa.c (bse_midi_device_alsa_open): 
+	* bsepcmdevice-alsa.c (bse_pcm_device_alsa_open): silence alsalib during
+	open() calls to avoid EBUSY error messages.
+
 Sun Oct  3 19:02:46 2004  Tim Janik  <timj@gtk.org>
 
 	* bsepcmdevice-alsa.c (alsa_device_check_io): fixed signed/unsigned
