--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+Mon Oct  4 23:30:29 2004  Tim Janik  <timj@gtk.org>
+
+	* it.po: added initial italian translation by
+	Petrecca Michele <petrecca@interfree.it>.
+
 2004-10-04  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
