--- a/docs/site-development.texi
+++ b/docs/site-development.texi
@@ -34,6 +34,7 @@ translations can be obtained from the following pages.
 @uref{http://l10n-status.gnome.org/gnome-2.8/eo/extras/index.html,, eo},
 @uref{http://l10n-status.gnome.org/gnome-2.8/fr/extras/index.html,, fr},
 @uref{http://l10n-status.gnome.org/gnome-2.8/hr/extras/index.html,, hr},
+@uref{http://l10n-status.gnome.org/gnome-2.8/it/extras/index.html,, it},
 @uref{http://l10n-status.gnome.org/gnome-2.8/ja/extras/index.html,, ja},
 @uref{http://l10n-status.gnome.org/gnome-2.8/mn/extras/index.html,, mn},
 @uref{http://l10n-status.gnome.org/gnome-2.8/nl/extras/index.html,, nl},
