--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-05  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 Mon Oct  4 23:30:29 2004  Tim Janik  <timj@gtk.org>
 
 	* it.po: added initial italian translation by
