--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,10 @@
+Tue Oct  5 22:48:52 2004  Tim Janik  <timj@gtk.org>
+
+	* sficxx.h: 
+	* sfivalues.c:
+	* sfidl-corec.cc:
+	* glib-extra.h: did code cleanups possible with Glib-2.4.
+
 Mon Oct  4 03:44:03 2004  Tim Janik  <timj@gtk.org>
 
 	* sfiparams.c: fixed param-spec leaks.
