fix texitheque CVS root reported by stefan
svn path=/trunk/; revision=2699

--- a/docs/site-download.texi
+++ b/docs/site-download.texi
@@ -92,7 +92,7 @@ CVS access to freedesktop.org is described on their
 page, however to just get texitheque, you do:
 
 @lisp
-$ export CVSROOT=':pserver:anoncvs@@pdx.freedesktop.org:/cvs'
+$ export CVSROOT=':pserver:anoncvs@pdx.freedesktop.org:/cvs/texitheque'
 $ cvs login # there is no password, just hit return
 $ cvs -z3 checkout texitheque
 @end lisp
