--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-06  Christian Neumair  <chris@gnome-de.org>
+
+	* de.po: Updated German translation by Moritz Mekelburger
+	<moritz@unix-ag.org>.
+
 2004-10-05  David Lodge <dave@cirt.net>
                                                                                 
         * en_GB.po: Updated British English translation.
