--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+Thu Oct  7 01:38:32 2004  Tim Janik  <timj@gtk.org>
+
+	* it.po: applied translation updates from Petrecca Michele.
+
 2004-10-06  Christian Neumair  <chris@gnome-de.org>
 
 	* de.po: Updated German translation by Moritz Mekelburger
